--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ColorDetected</string>
     <string name="dialog_message">Position the red line over the colour bands of the resistor,         keeping the tolerance band to the right</string>
     <string name="dialog_title">How to scan resistors</string>
+    <string name="camera">Camera</string>
+    <string name="guide">Guide</string>
 </resources>
